fixed overlap

--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ img {
 } */
 
 .profile-pic {
-  width: 200px;
+  width: 35vh;
   margin-left: 0px;
   border-radius: 6%;
   border-width: 5px;
@@ -274,7 +274,7 @@ box-shadow: 0px 0px 78px 4px rgba(16,134,232,0.73);
   }
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width:580px) {
   .page {
     margin: 80px;
     font-size: 24px;
